# Vaccination_Operation_II

./: README.md  VaccinationOperation.sln
VaccinationOperation/: Address.h  Appointment.cpp  Appointment.h  CMakeLists.txt  MedicalWorker.cpp  MedicalWorker.h  Person.h  PrivateClinic.cpp  VaccinationOperation.cpp  VaccinationOperation.vcxproj  Vaccinee.cpp  VaccineeWorker.h  main.cpp  main.h
VaccinationOperation/x64/Debug/: VaccinationOperation.exe.recipe  vc142.idb
VaccinationOperation/x64/Debug/Vaccinat.2fbc5731.tlog/: link.command.1.tlog  link.read.1.tlog
Vaccination_Operation_II/VaccinationOperation/: AbstractDate.h  Address.cpp  Clinic.cpp  Clinic.h  Date.cpp  Date.h  LinkedList.h  Person.cpp  PrivateClinic.h  VaccinationOperation.h  VaccinationOperation.vcxproj.filters  Vaccinee.h  VaccineeWorker.cpp
Vaccination_Operation_II/VaccinationOperation/Debug/: VaccinationOperation.exe.recipe
Vaccination_Operation_II/VaccinationOperation/x64/Debug/: VaccinationOperation.ilk
Vaccination_Operation_II/VaccinationOperation/x64/Debug/Vaccinat.2fbc5731.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VaccinationOperation.lastbuildstate  link.write.1.tlog
